sandbox/output
StingCalculatorTest.java:10: error: invalid method declaration; return type required
    public setup() {
           ^
1 error
